blueprints/investor-vc/salesforce/force-app/main/default/objects/Portfolio_Investment__c/Portfolio_Investment__c.object-meta.xml
<CustomObject>
    <description>One investment the firm has made in a company: amount, ownership, entry round, status and exit. Created when a deal closes. This is the post-investment side, separate from the deal flow.</description>
    <label>Portfolio investment</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Portfolio investments</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>