blueprints/investor-vc/salesforce/force-app/main/default/objects/Portfolio_Investment__c/fields/Amount_invested__c.field-meta.xml
<CustomField>
    <fullName>Amount_invested__c</fullName>
    <description>Total invested across all rounds.</description>
    <label>Amount invested</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>