blueprints/investor-vc/salesforce/force-app/main/default/objects/Portfolio_Investment__c/fields/Board_seat__c.field-meta.xml
<CustomField>
    <fullName>Board_seat__c</fullName>
    <defaultValue>false</defaultValue>
    <description>We hold a board seat or observer seat.</description>
    <label>Board seat</label>
    <type>Checkbox</type>
</CustomField>