blueprints/investor-vc/salesforce/force-app/main/default/objects/Portfolio_Investment__c/fields/Company__c.field-meta.xml
<CustomField>
    <fullName>Company__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Shows each investment we hold in a company across rounds.</description>
    <label>Company</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Our investments</relationshipLabel>
    <relationshipName>Our_investments</relationshipName>
    <type>Lookup</type>
</CustomField>