blueprints/investor-vc/salesforce/force-app/main/default/objects/Portfolio_Investment__c/fields/Entry_round__c.field-meta.xml
<CustomField>
    <fullName>Entry_round__c</fullName>
    <description>The round in which we first invested.</description>
    <label>Entry round</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Pre-seed</fullName>
            </value>
            <value>
                <fullName>Seed</fullName>
            </value>
            <value>
                <fullName>Series A</fullName>
            </value>
            <value>
                <fullName>Series B</fullName>
            </value>
            <value>
                <fullName>Later stage</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>