blueprints/investor-vc/salesforce/force-app/main/default/objects/Portfolio_Investment__c/fields/Exit_route__c.field-meta.xml
<CustomField>
    <fullName>Exit_route__c</fullName>
    <description>How the investment was realised. Required on the exited stage.</description>
    <label>Exit route</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Acquisition</fullName>
            </value>
            <value>
                <fullName>IPO</fullName>
            </value>
            <value>
                <fullName>Secondary sale</fullName>
            </value>
            <value>
                <fullName>Buyback</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>