blueprints/investor-vc/salesforce/force-app/main/default/objects/Portfolio_Investment__c/fields/Follow_on_reserve__c.field-meta.xml
<CustomField>
    <fullName>Follow_on_reserve__c</fullName>
    <description>Money held back for follow-on investment in this company.</description>
    <label>Follow-on reserve</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>