blueprints/investor-vc/salesforce/force-app/main/default/objects/Portfolio_Investment__c/fields/Fund__c.field-meta.xml
<CustomField>
    <fullName>Fund__c</fullName>
    <description>The fund or vehicle that made the investment. Edit the options to the client's funds at build.</description>
    <label>Fund</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Fund one</fullName>
            </value>
            <value>
                <fullName>Fund two</fullName>
            </value>
            <value>
                <fullName>Angel syndicate</fullName>
            </value>
            <value>
                <fullName>Direct or personal</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>