blueprints/investor-vc/salesforce/force-app/main/default/objects/Portfolio_Investment__c/fields/Health__c.field-meta.xml
<CustomField>
    <fullName>Health__c</fullName>
    <description>The partner's view of how the company is doing. Reviewed monthly.</description>
    <label>Health</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Thriving</fullName>
            </value>
            <value>
                <fullName>On track</fullName>
            </value>
            <value>
                <fullName>Needs support</fullName>
            </value>
            <value>
                <fullName>At risk</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>