blueprints/investor-vc/salesforce/force-app/main/default/objects/Portfolio_Investment__c/fields/Investment_date__c.field-meta.xml
<CustomField>
    <fullName>Investment_date__c</fullName>
    <description>Date the money was sent.</description>
    <label>Investment date</label>
    <type>Date</type>
</CustomField>