blueprints/investor-vc/salesforce/force-app/main/default/objects/Portfolio_Investment__c/fields/Latest_valuation__c.field-meta.xml
<CustomField>
    <fullName>Latest_valuation__c</fullName>
    <description>Our latest carrying value of the holding, per the most recent valuation.</description>
    <label>Latest valuation</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>