blueprints/investor-vc/salesforce/force-app/main/default/objects/Portfolio_Investment__c/fields/Lead_partner__c.field-meta.xml
<CustomField>
    <fullName>Lead_partner__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The partner responsible for supporting the company.</description>
    <label>Lead partner</label>
    <referenceTo>User</referenceTo>
    <relationshipLabel>Portfolio investments Lead partner</relationshipLabel>
    <relationshipName>Portfolio_Investment_Lead_partner</relationshipName>
    <type>Lookup</type>
</CustomField>