blueprints/investor-vc/salesforce/force-app/main/default/objects/Portfolio_Investment__c/fields/Next_update_due__c.field-meta.xml
<CustomField>
    <fullName>Next_update_due__c</fullName>
    <description>When the next investor update or catch-up is due from the founders.</description>
    <label>Next update due</label>
    <type>Date</type>
</CustomField>