blueprints/investor-vc/salesforce/force-app/main/default/objects/Portfolio_Investment__c/fields/Ownership_percent__c.field-meta.xml
<CustomField>
    <fullName>Ownership_percent__c</fullName>
    <description>Current fully diluted ownership. Updated after each round.</description>
    <label>Ownership</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>