blueprints/investor-vc/salesforce/force-app/main/default/objects/Portfolio_Investment__c/fields/Source_deal__c.field-meta.xml
<CustomField>
    <fullName>Source_deal__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Links an investment to the deal that created it.</description>
    <label>Source deal</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Investments</relationshipLabel>
    <relationshipName>Investments</relationshipName>
    <type>Lookup</type>
</CustomField>