blueprints/investor-vc/salesforce/force-app/main/default/objects/Portfolio_Investment__c/fields/Stage__c.field-meta.xml
<CustomField>
    <fullName>Stage__c</fullName>
    <description>Where the record is in its pipeline. Restricted to the pipeline's stages.</description>
    <label>Stage</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Active</fullName>
            </value>
            <value>
                <fullName>Follow-on review</fullName>
            </value>
            <value>
                <fullName>Exit preparation</fullName>
            </value>
            <value>
                <fullName>Exit process</fullName>
            </value>
            <value>
                <fullName>Exited</fullName>
            </value>
            <value>
                <fullName>Written off</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>