blueprints/investor-vc/salesforce/force-app/main/default/objects/Portfolio_Investment__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <description>Where the investment stands.</description>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Active</fullName>
            </value>
            <value>
                <fullName>Follow-on review</fullName>
            </value>
            <value>
                <fullName>Exit in progress</fullName>
            </value>
            <value>
                <fullName>Exited</fullName>
            </value>
            <value>
                <fullName>Written off</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>