blueprints/investor-vc/salesforce/force-app/main/default/objects/Portfolio_Investment__c/fields/Write_off_reason__c.field-meta.xml
<CustomField>
    <fullName>Write_off_reason__c</fullName>
    <description>Why the investment was written off. Required on the written-off stage.</description>
    <label>Write-off reason</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Ran out of cash</fullName>
            </value>
            <value>
                <fullName>Product failed</fullName>
            </value>
            <value>
                <fullName>Team split</fullName>
            </value>
            <value>
                <fullName>Market changed</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>