blueprints/investor-vc/salesforce/force-app/main/default/objects/Portfolio_Investment__c/validationRules/Gate_portfolio_outcome_exit_preparation.validationRule-meta.xml
<ValidationRule>
    <fullName>Gate_portfolio_outcome_exit_preparation</fullName>
    <active>true</active>
    <description>Stage gate: Portfolio outcome, Exit preparation and later stages need Latest valuation.</description>
    <errorConditionFormula>AND(CASE(Stage__c, "Active", 1, "Follow-on review", 2, "Exit preparation", 3, "Exit process", 4, "Exited", 5, 0) &gt;= 3, ISBLANK(Latest_valuation__c))</errorConditionFormula>
    <errorDisplayField>Latest_valuation__c</errorDisplayField>
    <errorMessage>Fill in Latest valuation before moving to Exit preparation.</errorMessage>
</ValidationRule>