blueprints/investor-vc/salesforce/force-app/main/default/objects/Portfolio_Investment__c/validationRules/Gate_portfolio_outcome_exit_process.validationRule-meta.xml
<ValidationRule>
    <fullName>Gate_portfolio_outcome_exit_process</fullName>
    <active>true</active>
    <description>Stage gate: Portfolio outcome, Exit process and later stages need Latest valuation and Lead partner.</description>
    <errorConditionFormula>AND(CASE(Stage__c, "Active", 1, "Follow-on review", 2, "Exit preparation", 3, "Exit process", 4, "Exited", 5, 0) &gt;= 4, OR(ISBLANK(Latest_valuation__c), ISBLANK(Lead_partner__c)))</errorConditionFormula>
    <errorMessage>Fill in Latest valuation and Lead partner before moving to Exit process.</errorMessage>
</ValidationRule>