blueprints/investor-vc/salesforce/force-app/main/default/objects/Portfolio_Investment__c/validationRules/Gate_portfolio_outcome_exited.validationRule-meta.xml
<ValidationRule>
    <fullName>Gate_portfolio_outcome_exited</fullName>
    <active>true</active>
    <description>Stage gate: Portfolio outcome, Exited and later stages need Exit route.</description>
    <errorConditionFormula>AND(CASE(Stage__c, "Active", 1, "Follow-on review", 2, "Exit preparation", 3, "Exit process", 4, "Exited", 5, 0) &gt;= 5, ISBLANK(TEXT(Exit_route__c)))</errorConditionFormula>
    <errorDisplayField>Exit_route__c</errorDisplayField>
    <errorMessage>Fill in Exit route before moving to Exited.</errorMessage>
</ValidationRule>