blueprints/investor-vc/salesforce/force-app/main/default/objects/Portfolio_Investment__c/validationRules/Lost_portfolio_outcome_written_off.validationRule-meta.xml
<ValidationRule>
    <fullName>Lost_portfolio_outcome_written_off</fullName>
    <active>true</active>
    <description>Lost reason: Portfolio outcome, Written off needs Write-off reason.</description>
    <errorConditionFormula>AND(ISPICKVAL(Stage__c, "Written off"), ISBLANK(TEXT(Write_off_reason__c)))</errorConditionFormula>
    <errorDisplayField>Write_off_reason__c</errorDisplayField>
    <errorMessage>Fill in Write-off reason before closing this as Written off.</errorMessage>
</ValidationRule>