blueprints/investor-vc/salesforce/force-app/main/default/objects/Portfolio_Investment__c/listViews/Portfolio_health.listView-meta.xml
<ListView>
    <fullName>Portfolio_health</fullName>
    <columns>NAME</columns>
    <columns>Stage__c</columns>
    <columns>Health__c</columns>
    <columns>Status__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>Active,Follow-on review</value>
    </filters>
    <label>Portfolio health</label>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>