blueprints/investor-vc/salesforce/force-app/main/default/objects/Portfolio_Investment__c/listViews/Updates_due.listView-meta.xml
<ListView>
    <fullName>Updates_due</fullName>
    <columns>NAME</columns>
    <columns>Stage__c</columns>
    <columns>Next_update_due__c</columns>
    <columns>Status__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>Active</value>
    </filters>
    <filters>
        <field>Next_update_due__c</field>
        <operation>greaterOrEqual</operation>
        <value>TODAY</value>
    </filters>
    <filters>
        <field>Next_update_due__c</field>
        <operation>lessOrEqual</operation>
        <value>NEXT_N_DAYS:14</value>
    </filters>
    <label>Investor updates due</label>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>